Fixed html overflow, added project content

--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,10 @@ todo {
 }
 
 /* Remove extra left and right margins, due to padding in columns */
-.row {margin: 0 -5px;}
+.row {
+    margin: auto;
+    padding-bottom: 30px;
+}
 
 /* Clear floats after the columns */
 .row:after {
@@ -87,8 +90,12 @@ todo {
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
     padding: 16px;
+    margin: 8px;
     text-align: center;
-    background-color: #f1f1f1;
+    background-color: #b0f7ff98;
+    overflow: auto;
+    height: 400px;
+
 }
 
 .img-container {
@@ -104,6 +111,23 @@ todo {
 }
 
 /* Responsive columns - one column layout (vertical) on small screens */
+
+@media screen and (min-width: 1200px) {
+    .column {
+        display: block;
+        margin-bottom: 20px;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .column {
+        width: 60%;
+        display: block;
+        margin-bottom: 20px;
+    }
+}
+
+
 @media screen and (max-width: 600px) {
     .column {
         width: 100%;
